...
    <string name="day_of_week_sunday">Sun</string>

    <string name="activity_hint">Activities</string>
    <string name="category_hint">Categories</string>
    <string name="record_tag_hint">Record tags</string>
    <string name="record_tag_hint_short">Tags</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="something_selected">Selected</string>
    <string name="something_available">Available</string>
...
    </plurals>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

...
    <string name="change_category_removed">Category removed</string>
    <string name="change_category_color_hint">Color</string>
    <string name="change_category_types_hint">Activities</string>
    <string name="change_category_save">Save</string>
    <string name="change_category_message_choose_name">Choose a name</string>
...
    <!--  Change record tag  -->
    <string name="change_record_tag_archived">Tag archived</string>
    <string name="change_record_tag_default_hint">Assigned by default</string>
    <string name="change_record_tag_type_general">Common</string>
    <string name="change_record_tag_type_general_hint">Can be assigned to records of any activity</string>
...
    <!--  Change record  -->
    <string name="change_record_message_choose_type">Select activity</string>
    <string name="change_record_type_field">Activity</string>
    <string name="change_record_tag_field">Tag</string>
    <string name="change_record_comment_field">Comment</string>
    <string name="change_record_comment_hint">Enter new comment</string>
    <string name="change_record_actions_hint">Actions</string>
    <string name="change_record_last_comments_hint">Last comments</string>
    <string name="change_record_favourite_comments_hint">Favourite</string>
    <string name="change_record_favourite_comments_hint_long">Favourite comments</string>
    <string name="change_record_favourite_activity_selection">Favourite only for selected activities</string>
    <string name="change_record_similar_comments_hint">Similar comments</string>
...
    <string name="change_record_type_name_hint">Enter new name</string>
    <string name="change_record_type_new_icon_text_hint">Enter new text</string>
    <string name="change_record_type_color_hint">Color</string>
    <string name="change_record_favourite_colors_hint">Favourite colors</string>
    <string name="change_record_type_icon_image_hint">Icon</string>
    <string name="change_record_type_icon_text_hint">Text</string>
    <string name="change_record_type_icon_emoji_hint">Emoji</string>
    <string name="change_record_type_icon_search_hint">Search (in English)</string>
    <string name="change_record_type_no_icon">No icon</string>
    <string name="change_record_favourite_icons_hint">Favourite icons</string>
    <string name="change_record_type_save">Save</string>
    <string name="change_record_message_choose_name">Choose a name</string>
...
    <string name="change_record_type_categories_empty">No categories added</string>
    <string name="change_record_type_goal_time_disabled">Disabled</string>
    <string name="change_record_type_goal_time_hint">Goal</string>
    <string name="change_record_type_limit_time_hint">Limit</string>
    <string name="change_record_type_additional_hint">Additional</string>
    <string name="change_record_type_default_duration">Default duration</string>
    <string name="change_record_type_default_duration_hint">Activities with default duration are tracked immediately on click.</string>
    <string name="change_record_type_goal_time_description">Notification will be shown after reaching the goal</string>
...

    <!--  Activity filters  -->
    <string name="change_activity_filters_hint">Activity filters</string>
    <string name="change_activity_filter_removed">Filter removed</string>
    <string name="change_activity_filter_save">Save</string>
...
    <string name="running_records_empty_hint">Long click to edit</string>
    <string name="running_records_empty_hint_inverted">Click to edit</string>
    <string name="running_records_add_type">Add</string>
    <string name="running_records_add_filter">Add filter</string>
    <string name="running_records_add_default">Default</string>
...
    <string name="settings_archive">Archive</string>
    <string name="settings_data_edit">Data edit</string>
    <string name="settings_complex_rules">Complex rules</string>
    <string name="settings_activity_suggestions">Activity suggestions</string>
    <string name="settings_edit_categories">Edit categories and tags</string>
    <string name="settings_edit_categories_hint">Assign categories to activities and tags to records.</string>
...
    <string name="settings_date_time_format_utc">UTC</string>
    <string name="settings_date_time_format_timezone">Time zone</string>
    <string name="settings_restore_backup">Restore backup</string>
    <string name="settings_restore_description">Current data will be lost.</string>
    <string name="settings_backup_options">Advanced options</string>
    <string name="settings_dialog_message">Restore backup?</string>
    <string name="settings_export_csv">Spreadsheet export</string>
...

    <string name="message_backup_saved">Backup saved</string>
    <string name="message_backup_restored">Backup restored</string>
    <string name="message_save_error">Error saving backup</string>
    <string name="message_restore_error">Error restoring backup</string>
...
    <string name="backup_options_save_without_records">Save backup without records</string>
    <string name="backup_options_save_without_records_hint">Can be used to share the setup.</string>
    <string name="backup_options_full_restore">Full restore</string>
    <string name="backup_options_full_restore_hint">Restores data and settings. Requires app restart.</string>
    <string name="backup_options_partial_restore">Import data from backup</string>
    <string name="backup_options_partial_restore_hint">Allows to choose which data to import. Current data will not be lost.</string>
    <string name="backup_options_trigger_auto_backup">Run automatic backup now</string>
...

    <!--  Icon emoji category  -->
    <string name="emojiGroupSmileys">Smileys &amp; Emotion</string>
    <string name="emojiGroupPeople">People &amp; Body</string>
    <string name="emojiGroupAnimals">Animals &amp; Nature</string>
...

    <!--  Icon image category  -->
    <string name="imageGroupMaps">Maps</string>
    <string name="imageGroupPlaces">Places</string>
    <string name="imageGroupSocial">Social</string>
...
    <!--  Shortcuts  -->
    <string name="shortcut_navigation_timers">Timers</string>
    <string name="shortcut_navigation_records">Records</string>
    <string name="shortcut_navigation_statistics">Statistics</string>
    <string name="shortcut_navigation_settings">Settings</string>
...
