...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?appInputFieldBorder">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/layoutChangeRecordTypeGoalPreview"
                        style="@style/EditScreenPreview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        app:layout_constraintEnd_toStartOf="@id/arrowChangeRecordTypeGoalTime"
                        tools:cardBackgroundColor="@color/black"
...
                android:layout_marginTop="-2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fieldChangeRecordTypeGoalTime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etChangeRecordTypeNote"
                    style="@style/EditTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/change_record_type_note_hint" />

            </com.google.android.material.textfield.TextInputLayout>
...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChangeRecordTypeColor"
        style="@style/EditScreenContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/edit_screen_margin_horizontal"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
...
