...
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvChangeRecordTypeGoalSummary"
                style="@style/InputFieldCardText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingVertical="8dp"
                app:layout_constraintEnd_toStartOf="@id/arrowChangeRecordTypeGoalSummary"
                app:layout_constraintStart_toStartOf="parent"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/fieldRecordTypeGoalType"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etChangeRecordTypeGoalCountValue"
                        style="@style/ChangeItemNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:inputType="number"
                        android:paddingVertical="0dp"
...
