...

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChangeRecordTagSelectActivity"
                style="@style/AppButton"
                android:layout_width="0dp"
                android:layout_marginHorizontal="@dimen/edit_screen_margin_horizontal"
                android:insetTop="3dp"
                android:text="@string/change_record_tag_select_activity_hint"
                android:textAllCaps="false"
...
                android:layout_marginTop="-2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fieldChangeRecordTagGoalTime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etChangeRecordTagNote"
                    style="@style/EditTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/change_record_type_note_hint" />

            </com.google.android.material.textfield.TextInputLayout>
...
