package com.example.util.simpletimetracker

import android.view.View
import androidx.annotation.StringRes
import androidx.test.espresso.Espresso.closeSoftKeyboard
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.assertion.PositionAssertions.isCompletelyAbove
import androidx.test.espresso.assertion.PositionAssertions.isCompletelyBelow
import androidx.test.espresso.assertion.PositionAssertions.isTopAlignedWith
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.PickerActions.setDate
import androidx.test.espresso.matcher.ViewMatchers.assertThat
import androidx.test.espresso.matcher.ViewMatchers.hasDescendant
import androidx.test.espresso.matcher.ViewMatchers.hasSibling
import androidx.test.espresso.matcher.ViewMatchers.isCompletelyDisplayed
import androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withClassName
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withSubstring
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.example.util.simpletimetracker.core.mapper.ColorMapper
import com.example.util.simpletimetracker.di.TestActionResolverImpl
import com.example.util.simpletimetracker.domain.activityFilter.model.ActivityFilter
import com.example.util.simpletimetracker.domain.activitySuggestion.model.ActivitySuggestion
import com.example.util.simpletimetracker.domain.color.model.AppColor
import com.example.util.simpletimetracker.domain.complexRule.model.ComplexRule
import com.example.util.simpletimetracker.domain.daysOfWeek.model.DayOfWeek
import com.example.util.simpletimetracker.domain.record.model.Record
import com.example.util.simpletimetracker.domain.record.model.RecordBase
import com.example.util.simpletimetracker.domain.recordType.model.RecordType
import com.example.util.simpletimetracker.domain.recordType.model.RecordTypeGoal
import com.example.util.simpletimetracker.feature_base_adapter.buttonsRow.view.ButtonsRowViewData
import com.example.util.simpletimetracker.feature_dialogs.dateTime.CustomDatePicker
import com.example.util.simpletimetracker.utils.BaseUiTest
import com.example.util.simpletimetracker.utils.NavUtils
import com.example.util.simpletimetracker.utils.checkViewDoesNotExist
import com.example.util.simpletimetracker.utils.checkViewIsDisplayed
import com.example.util.simpletimetracker.utils.checkViewIsNotDisplayed
import com.example.util.simpletimetracker.utils.clickOnCurrentDate
import com.example.util.simpletimetracker.utils.clickOnView
import com.example.util.simpletimetracker.utils.clickOnViewWithId
import com.example.util.simpletimetracker.utils.clickOnViewWithText
import com.example.util.simpletimetracker.utils.longClickOnView
import com.example.util.simpletimetracker.utils.nestedScrollTo
import com.example.util.simpletimetracker.utils.scrollRecyclerInPagerToView
import com.example.util.simpletimetracker.utils.scrollRecyclerToView
import com.example.util.simpletimetracker.utils.tryAction
import com.example.util.simpletimetracker.utils.tryActionWithFallback
import com.example.util.simpletimetracker.utils.withCardColor
import com.example.util.simpletimetracker.utils.withCardColorInt
import com.example.util.simpletimetracker.utils.withNullTag
import com.example.util.simpletimetracker.utils.withTag
import dagger.hilt.android.testing.HiltAndroidTest
import kotlinx.coroutines.runBlocking
import org.hamcrest.CoreMatchers.allOf
import org.hamcrest.CoreMatchers.equalTo
import org.hamcrest.CoreMatchers.`is`
import org.hamcrest.Matcher
import org.junit.Test
import org.junit.runner.RunWith
import java.util.Calendar
import com.example.util.simpletimetracker.feature_change_activity_filter.R as changeActivityFilterR
import com.example.util.simpletimetracker.feature_change_category.R as changeCategoryR
import com.example.util.simpletimetracker.feature_change_record.R as changeRecordR
import com.example.util.simpletimetracker.feature_change_record_tag.R as changeRecordTagR
import com.example.util.simpletimetracker.feature_change_record_type.R as changeRecordTypeR
import com.example.util.simpletimetracker.feature_change_goals.R as changeGoalsR
import com.example.util.simpletimetracker.feature_change_goals.api.R as changeGoalsApiR
import com.example.util.simpletimetracker.feature_dialogs.R as dialogsR
import com.example.util.simpletimetracker.feature_records.R as recordsR
import com.example.util.simpletimetracker.feature_settings.R as settingsR
import com.example.util.simpletimetracker.test.R as testR

@HiltAndroidTest
@RunWith(AndroidJUnit4::class)
class SettingsBackupTest : BaseUiTest() {

    // TODO shortcuts, tag values.
    @Test
    fun restore23() {
        restore(DatabaseVersion.VER_23)
    }

    @Test
    fun restore28() {
        restore(DatabaseVersion.VER_28)
    }

    @Test
    fun fullRestore23() {
        fullRestore(DatabaseVersion.VER_23)
    }

    @Test
    fun fullRestore28() {
        fullRestore(DatabaseVersion.VER_28)
    }

    @Test
    fun partialRestore23() {
        partialRestore(DatabaseVersion.VER_23)
    }

    @Test
    fun partialRestore28() {
        partialRestore(DatabaseVersion.VER_28)
    }

    @Test
    fun partialRestoreWithExistingData23() {
        partialRestoreWithExistingData(DatabaseVersion.VER_23)
    }

    @Test
    fun partialRestoreWithExistingData28() {
        partialRestoreWithExistingData(DatabaseVersion.VER_28)
    }

    private fun restore(databaseVersion: DatabaseVersion) {
        setDatabaseFile(databaseVersion)

        // Restore
        NavUtils.openSettingsScreen()
        NavUtils.openSettingsBackup()
        scrollSettingsRecyclerToText(R.string.settings_restore_backup)
        clickOnSettingsRecyclerText(R.string.settings_restore_backup)
        clickOnViewWithText(R.string.ok)

        // Check message
        tryAction { checkViewIsDisplayed(withText(R.string.message_backup_restored)) }
        clickOnViewWithId(com.google.android.material.R.id.snackbar_text)

        // TODO check all data
        // Check data
        runBlocking {
            test(activityDataList, recordTypeRepo.getAll())
            test(recordDataList, testUtils.recordInteractor.getAll())
            if (databaseVersion == DatabaseVersion.VER_28) {
                test(suggestionsDataList, testUtils.activitySuggestionInteractor.getAll())
            }
        }

        // Check types
        NavUtils.openRunningRecordsScreen()
        checkActivities(activityList.take(3))
        longClickOnView(getTypeMatcher("type3"))
        onView(withId(changeRecordTypeR.id.etChangeRecordTypeNote)).perform(nestedScrollTo())
        checkViewIsDisplayed(
            allOf(withId(changeRecordTypeR.id.etChangeRecordTypeNote), withText("type note")),
        )
        onView(withText(R.string.change_record_type_default_duration)).perform(nestedScrollTo())
        checkViewIsDisplayed(
            allOf(
                withId(changeRecordTypeR.id.tvChangeRecordTypeAdditionalDefaultDurationSelectorValue),
                withText("1$minuteString"),
            ),
        )
        pressBack()
        NavUtils.openSettingsScreen()
        NavUtils.openArchiveScreen()
        checkActivities(activityList.drop(3))

        // Check records
        pressBack()
        NavUtils.openRecordsScreen()
        clickOnCurrentDate()
        onView(withClassName(equalTo(CustomDatePicker::class.java.name)))
            .perform(setDate(2024, 9, 23))
        clickOnViewWithId(dialogsR.id.btnDateTimeDialogPositive)
        checkRecords(recordList, recordsR.id.rvRecordsList)

        // Check categories
        NavUtils.openSettingsScreen()
        NavUtils.openCategoriesScreen()
        checkCategories(categoryList)

        // Check categories relation
        clickOnViewWithText("category1")
        onView(withText(R.string.change_category_types_hint)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_category_types_hint)
        onView(withText("type1")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("type2")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        onView(withText("type3")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        pressBack()
        pressBack()

        clickOnViewWithText("category2")
        onView(withText(R.string.change_category_types_hint)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_category_types_hint)
        onView(withText("type2")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("type1")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        onView(withText("type3")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        pressBack()
        pressBack()

        clickOnViewWithText("category3")
        onView(withText(R.string.change_category_types_hint)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_category_types_hint)
        onView(withText("type1")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("type2")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("type3")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        pressBack()
        onView(withId(changeCategoryR.id.etChangeRecordCategoryNote)).perform(nestedScrollTo())
        checkViewIsDisplayed(
            allOf(withId(changeCategoryR.id.etChangeRecordCategoryNote), withText("category note")),
        )
        pressBack()

        // Check tags
        checkTags(tagList.take(3))
        pressBack()
        NavUtils.openArchiveScreen()
        checkTags(tagList.drop(3))
        pressBack()

        // Check tag relations
        NavUtils.openCategoriesScreen()
        longClickOnView(withText("tag1"))
        onView(withText(R.string.change_record_type_field)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_record_type_field)
        onView(withText("type1")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("type2")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        onView(withText("type3")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        pressBack()
        onView(withText(R.string.change_record_tag_default_hint)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_record_tag_default_hint)
        checkViewIsDisplayed(withText(R.string.nothing_selected))
        pressBack()
        clickOnViewWithId(changeRecordTagR.id.btnChangeRecordTagSelectActivity)
        onView(withText("type1")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        pressBack()
        pressBack()

        longClickOnView(withText("tag2"))
        onView(withText(R.string.change_record_type_field)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_record_type_field)
        onView(withText("type2")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("type1")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        onView(withText("type3")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        pressBack()
        onView(withText(R.string.change_record_tag_default_hint)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_record_tag_default_hint)
        checkViewIsDisplayed(withText(R.string.nothing_selected))
        pressBack()
        clickOnViewWithId(changeRecordTagR.id.btnChangeRecordTagSelectActivity)
        onView(withText("type2")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        pressBack()
        pressBack()

        longClickOnView(withText("tag3"))
        onView(withText(R.string.change_record_type_field)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_record_type_field)
        checkViewIsDisplayed(withText(R.string.nothing_selected))
        pressBack()
        onView(withText(R.string.change_record_tag_default_hint)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_record_tag_default_hint)
        onView(allOf(withText("type1"), isCompletelyDisplayed()))
            .check(isTopAlignedWith(allOf(withText("type2"), isCompletelyDisplayed())))
        onView(allOf(withText("type2"), isCompletelyDisplayed()))
            .check(isTopAlignedWith(allOf(withText("type3"), isCompletelyDisplayed())))
        pressBack()
        clickOnViewWithId(changeRecordTagR.id.btnChangeRecordTagSelectActivity)
        checkViewIsDisplayed(withText(R.string.nothing_selected))
        pressBack()
        onView(withId(changeRecordTagR.id.etChangeRecordTagNote)).perform(nestedScrollTo())
        checkViewIsDisplayed(
            allOf(withId(changeRecordTagR.id.etChangeRecordTagNote), withText("tag note")),
        )
        pressBack()
        pressBack()

        // Check activity filters
        runBlocking { prefsInteractor.setShowActivityFilters(true) }
        NavUtils.openRunningRecordsScreen()
        checkActivityFilters(
            activityFilterList.mapIndexed { index, data ->
                if (index == 0) {
                    data.copy(color = ColorTestData.Res(R.color.colorInactive))
                } else {
                    data
                }
            },
        )

        longClickOnView(withText("filter1"))
        checkViewIsDisplayed(
            allOf(
                withId(changeActivityFilterR.id.layoutChangeActivityFilterColorPreview),
                withCardColor(getColorByPosition(0)),
            ),
        )
        onView(withText(R.string.activity_hint)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.activity_hint)
        onView(withText("type1")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("type2")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("type3")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        pressBack()
        pressBack()

        longClickOnView(withText("filter2"))
        checkViewIsDisplayed(
            allOf(
                withId(changeActivityFilterR.id.layoutChangeActivityFilterColorPreview),
                withCardColorInt(0xff345678.toInt()),
            ),
        )
        onView(withText(R.string.category_hint)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.category_hint)
        onView(withText("category1")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("category2")).check(isCompletelyAbove(withId(R.id.viewDividerItem)))
        onView(withText("category3")).check(isCompletelyBelow(withId(R.id.viewDividerItem)))
        pressBack()
        pressBack()
        runBlocking { prefsInteractor.setShowActivityFilters(false) }

        // Check fav comments
        NavUtils.openRecordsScreen()
        NavUtils.openAddRecord()
        onView(withText(R.string.change_record_comment_field)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_record_comment_field)
        checkViewIsDisplayed(withText(R.string.change_record_favourite_comments_hint))
        commentList.forEach {
            checkViewIsDisplayed(
                allOf(withId(changeRecordR.id.tvChangeRecordItemComment), withText(it.comment)),
            )
        }
        closeSoftKeyboard()
        pressBack()
        pressBack()

        // Check fav icons
        tryActionWithFallback(onError = { pressBack() }) { NavUtils.openRunningRecordsScreen() }
        clickOnViewWithText(R.string.running_records_add_type)
        closeSoftKeyboard()
        clickOnViewWithText(R.string.change_record_type_icon_image_hint)
        iconsList.forEach {
            when (it.type) {
                is FavouriteIconTestData.Type.Image -> {
                    clickOnView(
                        allOf(
                            isDescendantOfA(withId(changeRecordTypeR.id.btnIconSelectionSwitch)),
                            withText(R.string.change_record_type_icon_image_hint),
                        ),
                    )
                    checkViewIsDisplayed(withText(R.string.change_record_favourite_comments_hint))
                    onView(withTag(getIconResIdByName(it.icon)))
                        .check(isCompletelyAbove(withText(R.string.imageGroupMaps)))
                }
                is FavouriteIconTestData.Type.Emoji -> {
                    clickOnView(
                        allOf(
                            isDescendantOfA(withId(changeRecordTypeR.id.btnIconSelectionSwitch)),
                            withText(R.string.change_record_type_icon_emoji_hint),
                        ),
                    )
                    checkViewIsDisplayed(withText(R.string.change_record_favourite_comments_hint))
                    onView(withText(it.icon))
                        .check(isCompletelyAbove(withText(R.string.emojiGroupSmileys)))
                }
            }
        }
        pressBack()
        pressBack()

        // Check fav colors
        clickOnViewWithText(R.string.running_records_add_type)
        closeSoftKeyboard()
        clickOnViewWithText(R.string.change_record_type_color_hint)
        colorsList.forEach {
            scrollRecyclerToView(
                changeRecordTypeR.id.rvChangeRecordTypeColor, withCardColorInt(it.colorInt),
            )
            checkViewIsDisplayed(withCardColorInt(it.colorInt))
        }
        pressBack()
        pressBack()

        // Check goals
        longClickOnView(getTypeMatcher("type1"))
        checkViewIsNotDisplayed(withId(changeRecordTypeR.id.layoutChangeRecordTypeGoalPreview))
        pressBack()
        longClickOnView(getTypeMatcher("type3"))
        clickOnViewWithText(R.string.change_record_type_goal_time_hint)
        checkGoal(RecordTypeGoal.Range.Session, RecordTypeGoal.Type.Duration(1), "1$minuteString")
        checkGoal(RecordTypeGoal.Range.Daily, RecordTypeGoal.Type.Duration(1), "1$hourString")
        checkGoal(RecordTypeGoal.Range.Weekly, RecordTypeGoal.Type.Duration(1), "4$hourString")
        checkGoal(RecordTypeGoal.Range.Monthly, RecordTypeGoal.Type.Duration(1), "40$hourString")
        pressBack()
        pressBack()
        NavUtils.openSettingsScreen()
        NavUtils.openCategoriesScreen()
        clickOnViewWithText("category3")
        onView(withText(R.string.change_record_type_goal_time_hint)).perform(nestedScrollTo())
        clickOnViewWithText(R.string.change_record_type_goal_time_hint)
        val countGoalType = RecordTypeGoal.Type.Count(5)
        GoalsTestUtils.expandGoal(RecordTypeGoal.Range.Daily, countGoalType)
        onView(
            allOf(
                GoalsTestUtils.goalField(
                    RecordTypeGoal.Range.Daily,
                    countGoalType,
                    changeGoalsR.id.etChangeRecordTypeGoalCountValue,
                ),
                withText("5"),
            ),
        ).check(matches(isDisplayed()))
        onView(
            allOf(
                isDescendantOfA(GoalsTestUtils.goalCard(RecordTypeGoal.Range.Daily, countGoalType)),
                withId(R.id.btnButtonsRowView),
                when (databaseVersion) {
                    DatabaseVersion.VER_23 -> withText(R.string.change_record_type_goal_time_hint)
                    DatabaseVersion.VER_28 -> withText(R.string.change_record_type_limit_time_hint)
                },
                withTag(ButtonsRowViewData.SELECTED_BUTTON_TEST_TAG),
            ),
        ).check(matches(isDisplayed()))
        pressBack()
        pressBack()
        pressBack()

        // Check rules
        NavUtils.openSettingsAdditional()
        NavUtils.openComplexRules()
        checkRules(ruleList)
        pressBack()

        if (databaseVersion == DatabaseVersion.VER_28) {
            // Check suggestions
            NavUtils.openSuggestions()
            checkSuggestions(suggestionsList)
            pressBack()
        }
    }

    private fun checkGoal(
        range: RecordTypeGoal.Range,
        type: RecordTypeGoal.Type,
        value: String,
    ) {
        val card = GoalsTestUtils.goalCard(range, type)
        scrollRecyclerToView(changeGoalsApiR.id.rvChangeRecordTypeGoals, card)
        checkViewIsDisplayed(
            allOf(
                card,
                hasDescendant(
                    allOf(
                        withId(changeGoalsR.id.tvChangeRecordTypeGoalSummary),
                        withSubstring(value),
                    ),
                ),
            ),
        )
    }

    private fun fullRestore(databaseVersion: DatabaseVersion) {
        setDatabaseFile(databaseVersion)

        runBlocking { prefsInteractor.setShowActivityFilters(false) }

        // Restore
        NavUtils.openSettingsScreen()
        NavUtils.openSettingsBackup()
        scrollSettingsRecyclerToText(R.string.settings_backup_options)
        clickOnSettingsRecyclerText(R.string.settings_backup_options)
        clickOnViewWithText(R.string.backup_options_full_restore)
        clickOnViewWithText(R.string.ok)

        // Check message
        tryAction { checkViewIsDisplayed(withText(R.string.message_backup_restored)) }
        clickOnViewWithId(com.google.android.material.R.id.snackbar_text)

        // Settings is restored (filters are shown)
        NavUtils.openRunningRecordsScreen()
        clickOnViewWithText("filter2")

        // Check types
        checkViewIsDisplayed(getTypeMatcher("type1"))
        checkViewIsDisplayed(getTypeMatcher("type2"))
        checkViewIsDisplayed(getTypeMatcher("type3"))
    }

    @Suppress("ComplexRedundantLet")
    private fun partialRestore(databaseVersion: DatabaseVersion) {
        setDatabaseFile(databaseVersion)

        // Restore
        NavUtils.openSettingsScreen()
        NavUtils.openSettingsBackup()
        scrollSettingsRecyclerToText(R.string.settings_backup_options)
        clickOnSettingsRecyclerText(R.string.settings_backup_options)
        clickOnViewWithText(R.string.backup_options_partial_restore)

        // Check data counts
        checkViewIsDisplayed(withText("${getString(R.string.activity_hint)}(4)"))
        checkViewIsDisplayed(withText("${getString(R.string.category_hint)}(3)"))
        checkViewIsDisplayed(withText("${getString(R.string.record_tag_hint_short)}(4)"))
        checkViewIsDisplayed(withText("${getString(R.string.shortcut_navigation_records)}(4)"))
        checkViewIsDisplayed(withText("${getString(R.string.change_activity_filters_hint)}(2)"))
        checkViewIsDisplayed(withText("${getString(R.string.change_record_favourite_comments_hint_long)}(2)"))
        checkViewIsDisplayed(withText("${getString(R.string.change_record_favourite_icons_hint)}(2)"))
        checkViewIsDisplayed(withText("${getString(R.string.change_record_favourite_colors_hint)}(2)"))
        checkViewIsDisplayed(withText("${getString(R.string.settings_complex_rules)}(3)"))
        if (databaseVersion == DatabaseVersion.VER_28) {
            checkViewIsDisplayed(withText("${getString(R.string.settings_activity_suggestions)}(3)"))
        }

        // Check filtering
        // Activities
        clickOnViewWithText("${getString(R.string.activity_hint)}(4)")
        checkActivities(activityList)
        pressBack()
        // Categories
        clickOnViewWithText("${getString(R.string.category_hint)}(3)")
        checkCategories(categoryList)
        pressBack()
        // Tags
        clickOnViewWithText("${getString(R.string.record_tag_hint_short)}(4)")
        checkTags(tagList)
        pressBack()
        // Records
        clickOnViewWithText("${getString(R.string.shortcut_navigation_records)}(4)")
        checkRecords(recordList, settingsR.id.rvSettingsPartialRestoreSelectionContainer)
        pressBack()
